--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
-          flutter-version: '3.0.6'
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
+      - run: flutter --version
       - name: Install project dependencies
         working-directory: ./src/desk/test_app
         run: flutter pub get
