--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -42,4 +42,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: build/windows/runner/Release/MacRecoveryX-${{github.ref_name}}-windows.zip
+          files: ./src/desk/test_app/build/windows/runner/Release/test-${{github.ref_name}}-windows.zip
