--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,29 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
-      - run: flutter --version
-      - name: Install project dependencies
-        working-directory: ./src/desk/test_app
-        run: flutter pub get
-      - name: Enable windows build
-        working-directory: ./src/desk/test_app
-        run: flutter config --enable-windows-desktop
-      - name: Build artifacts
-        working-directory: ./src/desk/test_app
-        run: flutter build windows --release
-      - name: Archive Release
-        uses: thedoctor0/zip-release@master
-        with:
-          type: 'zip'
-          filename: test-${{github.ref_name}}-windows.zip
-          directory: ./src/desk/test_app/build/windows/runner/Release
-      - name: Windows Release
+ 
+      - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: ./src/desk/test_app/build/windows/runner/Release/test-${{github.ref_name}}-windows.zip
+          files: ./src/desk/test_app/linux/main.cc
