--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,9 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
- 
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          files: ./src/desk/test_app/linux/main.cc
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./src/desk/test_app/linux/main.cc
+          asset_name: Windows.cc
+          tag: ${{ github.ref }}
+          overwrite: true
+          body: "This is my release text"
