--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,12 +17,25 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+   
+      - name: VersionSet
+        id: version
+        uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
+          WITH_V: true
+          DEFAULT_BUMP: "minor"
+          PRERELEASE: true
+          PRERELEASE_SUFFIX: "dev"
+          RELEASE_BRANCHES: "dev"
+          INITIAL_VERSION: "0.0.0"
+          DRY_RUN: true
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./src/desk/test_app/linux/main.cc
           asset_name: Windows.cc
-          tag: ${{ github.ref }}
+          tag:  ${{ step.version.outputs.new_tag  }}
           overwrite: true
           body: "This is my release text"
