--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -36,6 +36,6 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./src/desk/test_app/linux/main.cc
           asset_name: Windows.cc
-          tag:  ${{ step_version.outputs.new_tag  }}
+          tag:  ${{ steps.step_version.outputs.new_tag  }}
           overwrite: true
           body: "This is my release text"
