--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -29,7 +29,14 @@ jobs:
       - name: Use the previous version
         run: |
           echo ${{ steps.version.outputs.type }}
-
+          
+      - uses: mad9000/actions-find-and-replace-string@3
+        id: version2
+        with:
+          source: ${{ steps.version.outputs.next }} # this translates to ref/heads/main on the main branch, but can be any arbitrary string 
+          find: '${{github.ref_name}}-'        # we want to remove ref/heads/ from source 
+          replace: ''               # and replace it with a blank string (ie. removing it)  
+          
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable' # or: 'beta', 'dev' or 'master'
@@ -42,7 +49,7 @@ jobs:
         run: flutter config --enable-windows-desktop
       - name: Build artifacts
         working-directory: ./src/desk/test_app
-        run: flutter build windows --release --build-name ${{steps.version.outputs.next}} --build-number ${{steps.version.outputs.next}}
+        run: flutter build windows --release --build-name ${{steps.version.outputs.next}} --build-number ${{steps.version2.outputs.value}}
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
