--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -49,7 +49,7 @@ jobs:
         run: flutter config --enable-windows-desktop
       - name: Build artifacts
         working-directory: ./src/desk/test_app
-        run: flutter build windows --release --build-name ${{steps.version.outputs.next}} --build-number ${{steps.version2.outputs.value}}
+        run: flutter build windows --release --build-name ${{steps.version2.outputs.value}} --build-number ${{github.run_number}}
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
