--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,9 +9,12 @@ on:
   push:
     branches: [ "dev" ]
 
-jobs:
-  build-and-release-windows:
+jobs: 
+  windows:
     runs-on: windows-latest
+    outputs:
+      next1: ${{ steps.version.outputs.next }}
+      next2: ${{ steps.version2.outputs.value }}
 
     steps:
       - uses: actions/checkout@v3
@@ -66,3 +69,42 @@ jobs:
           tag:  ${{ steps.version.outputs.next  }}
           overwrite: true
           body: "This is my release text" 
+          
+  linux:
+    runs-on: ubuntu-latest
+    needs: windows 
+    steps:
+      - env:
+          next1: ${{needs.windows.outputs.next1}}
+          next2: ${{needs.windows.outputs.next2}}
+      - uses: actions/checkout@v3
+   
+     
+      - name: Use the version
+        run: |
+          echo "$next1 $next2"
+
+     
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
+      - run: flutter --version
+      - name: Install project dependencies
+        working-directory: ./src/desk/test_app
+        run: flutter pub get
+      - name: Enable windows build
+        working-directory: ./src/desk/test_app
+        run: flutter config --enable-windows-desktop
+      - name: Build artifacts
+        working-directory: ./src/desk/test_app
+        run: flutter build apk --no-tree-shake-icons --release --build-name ${{next2}} --build-number ${{github.run_number}}
+      
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./src/desk/test_app/build/app/outputs/flutter-apk/app-release.apk
+          asset_name: ${{steps.version.outputs.next}}-apk.apk
+          tag:  ${{ steps.version.outputs.next  }}
+          overwrite: true
+          body: "${{ steps.version.outputs.next  }} Developer version" 
