--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -74,13 +74,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: windows 
     steps:
-
+     
       - uses: actions/checkout@v3
    
      
       - name: Use the version
         run: |
-          echo "$next1 $next2"
+          echo "${{needs.windows.outputs.next1}} ${{needs.windows.outputs.next2}}"
 
      
       - uses: subosito/flutter-action@v2
@@ -95,14 +95,14 @@ jobs:
         run: flutter config --enable-windows-desktop
       - name: Build artifacts
         working-directory: ./src/desk/test_app
-        run: flutter build apk --no-tree-shake-icons --release --build-name ${{next2}} --build-number ${{github.run_number}}
+        run: flutter build apk --no-tree-shake-icons --release --build-name ${{needs.windows.outputs.next2}} --build-number ${{github.run_number}}
       
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./src/desk/test_app/build/app/outputs/flutter-apk/app-release.apk
-          asset_name: ${{steps.version.outputs.next}}-apk.apk
-          tag:  ${{ steps.version.outputs.next  }}
+          asset_name: ${{needs.windows.outputs.next1}}-apk.apk
+          tag:  ${{needs.windows.outputs.next1}}
           overwrite: true
-          body: "${{ steps.version.outputs.next  }} Developer version" 
+          body: "${{needs.windows.outputs.next1}} Developer version" 
